--- a/requirements-experiments.txt
+++ b/requirements-experiments.txt
@@ -16,6 +16,7 @@ huggingface-hub==1.1.4
 hf-xet==1.2.0
 requests==2.32.5
 pyyaml==6.0.3
+transformers==4.46.2
 
 # Timezones / misc
 python-dateutil==2.9.0.post0
