Unified model selection/logging across the banked training scripts and sweep runners, switched CSV/W&B fields to model_type/baseline_impl/ska_backend/ska_score_mode, and wired score modes into bank specs and SetBankAttention. Runners now require --model-type, and sweep YAMLs include the new parameters.

--- a/configs/sweeps/stageA_quality.yaml
+++ b/configs/sweeps/stageA_quality.yaml
@@ -15,6 +15,18 @@ parameters:
   # W&B project name.
   wandb-project:
     value: set-attention-paper
+  # Model type: baseline or ska.
+  model-type:
+    values: [baseline, ska]
+  # Baseline attention implementation.
+  baseline-impl:
+    value: explicit
+  # SKA backend implementation.
+  ska-backend:
+    value: python
+  # SKA score mode (kernel).
+  ska-score-mode:
+    value: delta_plus_dot
   # LM dataset identifier.
   lm-dataset:
     value: wikitext103
