--- a/configs/sweeps/stageB_scaling_tiny.yaml
+++ b/configs/sweeps/stageB_scaling_tiny.yaml
@@ -7,6 +7,10 @@ parameters:
   production: {value: true}
   wandb-project: {value: set-attention-test}
   grad-log-interval: {value: 10}
+  model-type: {values: [baseline, ska]}
+  baseline-impl: {value: explicit}
+  ska-backend: {value: python}
+  ska-score-mode: {value: delta_plus_dot}
 
   lm-dataset: {value: wikitext2}
   lm-subset-path: {value: subsets/wikitext2_train_01pct.json}
