Added task into the W&B config for all four banked training scripts. script was already present, so no change needed there.

--- a/configs/sweeps/stageA_quality.yaml
+++ b/configs/sweeps/stageA_quality.yaml
@@ -14,7 +14,7 @@ parameters:
     value: true
   # W&B project name.
   wandb-project:
-    value: set-attention-paper
+    value: set-attention-smoke
   # Model type: baseline or ska.
   model-type:
     values: [baseline, ska]
