--- a/configs/ablations/pooling_effect_minimal.yaml
+++ b/configs/ablations/pooling_effect_minimal.yaml
@@ -1,5 +1,15 @@
 model:
   family: set_only
+  vocab_size: 0
+  d_model: 256
+  num_layers: 4
+  num_heads: 8
+  window_size: 32
+  stride: 16
+  dropout: 0.1
+  max_seq_len: 256
+  backend: dense_exact
+  router_topk: 4
   feature_mode: hashed_counts
   router_type: learned
   pooling:
