--- a/configs/ablations/pooling_effect_minimal.yaml
+++ b/configs/ablations/pooling_effect_minimal.yaml
@@ -1,5 +1,7 @@
 model:
-  family: set_only
+  implementation: set_only
+  attention_family: dense
+  backend: exact
   vocab_size: 0
   d_model: 256
   num_layers: 4
@@ -8,7 +10,6 @@ model:
   stride: 64
   dropout: 0.1
   max_seq_len: 256
-  backend: dense_exact
   router_topk: 4
   feature_mode: hashed_counts
   router_type: learned
