--- a/configs/set_only/wikitext2_dense_exact.yaml
+++ b/configs/set_only/wikitext2_dense_exact.yaml
@@ -1,5 +1,7 @@
 model:
-  family: set_only
+  implementation: set_only
+  attention_family: dense
+  backend: exact
   vocab_size: 0
   d_model: 256
   num_layers: 4
@@ -10,7 +12,6 @@ model:
   max_seq_len: 256
   router_type: uniform
   router_topk: 0
-  backend: dense_exact
   feature_mode: geometry_only
   gamma: 1.0
   beta: 0.0
