--- a/configs/baseline/transformer_lm_wikitext2.yaml
+++ b/configs/baseline/transformer_lm_wikitext2.yaml
@@ -5,7 +5,7 @@ model:
   architecture: transformer_lm
   vocab_size: 0
   d_model: 512
-  nhead: 8
+  num_heads: 8
   num_layers: 6
   dim_feedforward: 2048
   dropout: 0.1
