Added separated dropout configs for the attentions layers and for the rest of the model; also fixed logs now including ffn dimension included

--- a/configs/ablations/pooling_effect_minimal.yaml
+++ b/configs/ablations/pooling_effect_minimal.yaml
@@ -9,6 +9,9 @@ model:
   window_size: 64
   stride: 64
   dropout: 0.1
+  attn_dropout: null
+  resid_dropout: null
+  ffn_dropout: null
   max_seq_len: 256
   router_topk: 4
   feature_mode: hashed_counts
