--- a/configs/set_only/wikitext2_dense_exact.yaml
+++ b/configs/set_only/wikitext2_dense_exact.yaml
@@ -10,6 +10,9 @@ model:
   num_layers: 6
   dim_feedforward: 1536
   dropout: 0.1
+  attn_dropout: null
+  resid_dropout: null
+  ffn_dropout: null
   max_seq_len: 512
 
   window_size: 16
