--- a/configs/set_only/wikitext2_nystrom.yaml
+++ b/configs/set_only/wikitext2_nystrom.yaml
@@ -9,6 +9,9 @@ model:
   window_size: 32
   stride: 16
   dropout: 0.1
+  attn_dropout: null
+  resid_dropout: null
+  ffn_dropout: null
   max_seq_len: 256
   router_type: uniform
   router_topk: 0
